--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/a2.png" />
+    <a
+      target="_blank"
+      style="display: none"
+      href="https://icons8.com/icon/mJM1WQLhWFWx/a"
+      >A icon by</a
+    >
+    <a target="_blank" style="display: none" href="https://icons8.com"
+      >Icons8</a
+    >
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Aadarsh's Portfolio</title>
+    <title>Aadarsh Jha</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
