--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
     <a target="_blank" style="display: none" href="https://icons8.com"
       >Icons8</a
     >
+    <a
+      style="display: none"
+      href="https://www.flaticon.com/free-stickers/respect"
+      title="respect stickers"
+      >Respect stickers created by aslaiart - Flaticon</a
+    >
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
